# ad2cp_python

./: .gitattributes  .gitignore  ADCP.py  ADCPConfig.py  ADCPFiles.py  ADCPLog.py  ADCPOpts.py  ADCPPlotUtils.py  ADCPRealtime.py  ADCPUtils.py  BaseADCP.py  BaseADCPMission.py  CHANGELOG.md  CompareToMat.py  DiveOcean.py  ExtendedDataClass.py  ISSUES.md  LICENSE  Makefile  MissionOcean.py  ReadMe.md  SGADCP.py  SGADCPPlot.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  var_meta.yml
.github/workflows/: action.yml
BasePlotting/: DiveOcean.py
config/: global_meta.yml  global_meta_local_example.yml  var_meta.yml
docs/: explanation.md  index.md  reference.md  sections.yml  sg000.yml  tutorials.md
testdata/: .gitignore
testdata/downward/: .gitignore  p2650001.nc  p2650002.nc  p2650003.nc  p2650004.nc  p2650005.nc
testdata/downward/sc0001a/: ad2cp.dao
testdata/downward/sc0001b/: ad2cp.dao
testdata/downward/sc0002a/: ad2cp.dao
testdata/downward/sc0002b/: ad2cp.dao
testdata/downward/sc0003a/: ad2cp.dao
testdata/downward/sc0003b/: ad2cp.dao
testdata/downward/sc0004a/: ad2cp.dao
testdata/downward/sc0004b/: ad2cp.dao
testdata/downward/sc0005a/: ad2cp.dao
testdata/downward/sc0005b/: ad2cp.dao
testdata/sg171_EKAMSAT_Apr24_with_adcp/: sg_calib_constants.m
testdata/upward/: .gitignore  p1710001.nc  p1710002.nc  p1710003.nc  p1710004.nc  p1710005.nc
testdata/upward/sc0001a/: ad2cp.dao
testdata/upward/sc0001b/: ad2cp.dao
testdata/upward/sc0002a/: ad2cp.dao
testdata/upward/sc0002b/: ad2cp.dao
testdata/upward/sc0003a/: ad2cp.dao
testdata/upward/sc0003b/: ad2cp.dao
testdata/upward/sc0004a/: ad2cp.dao
testdata/upward/sc0004b/: ad2cp.dao
testdata/upward/sc0005a/: ad2cp.dao
testdata/upward/sc0005b/: ad2cp.dao
tests/: test_BaseADCP.py  test_BaseADCPMission.py  test_ExtendedDataClass.py  test_SGADCP.py  testutils.py
